<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activitys.LoginActivity">

    <ImageView
        android:id="@+id/login_avt_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/icons8_user_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_username_txt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/scrim"
        android:hint="@string/username_edt"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="@+id/login_avt_img"
        app:layout_constraintStart_toStartOf="@+id/login_avt_img"
        app:layout_constraintTop_toBottomOf="@+id/login_avt_img" />

    <EditText
        android:id="@+id/login_password_txt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/scrim"
        android:hint="@string/password_txt"
        android:paddingLeft="8dp"
        app:layout_constraintEnd_toEndOf="@+id/login_username_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_username_txt"
        app:layout_constraintTop_toBottomOf="@+id/login_username_txt" />

    <RadioGroup
        android:id="@+id/login_sex_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="@+id/login_password_txt"
        app:layout_constraintStart_toStartOf="@+id/login_password_txt"
        app:layout_constraintTop_toBottomOf="@+id/login_password_txt">

        <RadioButton
            android:id="@+id/login_male_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male_txt" />

        <RadioButton
            android:id="@+id/login_famale_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/famale_txt" />

    </RadioGroup>

    <Button
        android:id="@+id/login_date_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/date_btn"
        app:layout_constraintStart_toStartOf="@+id/login_sex_radio_group"
        app:layout_constraintTop_toBottomOf="@+id/login_sex_radio_group" />

    <TextView
        android:id="@+id/login_date_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toEndOf="@+id/login_date_btn"
        app:layout_constraintTop_toTopOf="@+id/login_date_btn" />

    <Button
        android:id="@+id/login_cancel_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toStartOf="@+id/login_save_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_date_txt" />

    <Button
        android:id="@+id/login_save_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/login_cancel_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_date_txt" />

</androidx.constraintlayout.widget.ConstraintLayout>